--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -8,17 +8,16 @@
     <title>Document</title>
     <link href="/main.css" rel="stylesheet">
 </head>
-
 <body>
 
     <div th:replace="~{nav.html::navbar}"></div>
 
-    <div class="card" th:each="i: ${items}">
+    <div class="detail">
+        <h4>상세페이지</h4>
         <img src="https://placehold.co/300">
-        <div>
-            <h4 th:text="${i.title}">상품이름</h4>
-            <p th:text="${i.price}">상품 가격</p>
-        </div>
+        <h4 th:text = "${item.title}">상품명</h4>
+        <p th:text = "${item.price}">가격</p>
     </div>
+
 </body>
 </html>
