--- a/src/main/resources/templates/notice.html
+++ b/src/main/resources/templates/notice.html
@@ -6,19 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="/main.css" rel="stylesheet">
 </head>
-
 <body>
-
-    <div th:replace="~{nav.html::navbar}"></div>
-
-    <div class="card" th:each="i: ${items}">
-        <img src="https://placehold.co/300">
-        <div>
-            <h4 th:text="${i.title}">상품이름</h4>
-            <p th:text="${i.price}">상품 가격</p>
-        </div>
+    <div th:each="i : ${notice}">
+        <h2 th:text="${i.title}">공지사항</h2>
     </div>
 </body>
 </html>
