--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -8,17 +8,15 @@
     <title>Document</title>
     <link href="/main.css" rel="stylesheet">
 </head>
-
 <body>
 
     <div th:replace="~{nav.html::navbar}"></div>
 
-    <div class="card" th:each="i: ${items}">
-        <img src="https://placehold.co/300">
-        <div>
-            <h4 th:text="${i.title}">상품이름</h4>
-            <p th:text="${i.price}">상품 가격</p>
-        </div>
-    </div>
+    <form action="/add" method="POST">
+        <input name = "title">
+        <input name = "price">
+        <button type = "submit">전송</button>
+    </form>
+
 </body>
 </html>
